web-app-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-deployment
spec:
  type: LoadBalancer
  selector:
    app: web
    #department: sales
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
