web-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-deployment
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 8080 #this is the external port
      targetPort: 8080 #this port must be the same with container port
